--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,13 @@
         <dependency>
             <groupId>org.junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>3.8.1</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
+            <version>3.1-b08</version>
         </dependency>
+
     </dependencies>
 </project>
